z-index bug fixed + scrollbar style amendments

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -692,7 +692,7 @@ $dark-theme: mat.define-dark-theme(
 .def {
   color: #999;
   cursor: help;
-  /* position: relative; */
+  position: relative;
   z-index: 2;
 }
 
@@ -879,18 +879,16 @@ a:hover {
 ::-webkit-scrollbar {
   height: 12px;
   width: 12px;
-  background: white;
+  background: none;
 }
 
 ::-webkit-scrollbar-thumb {
   background: map-get($mat-brown-palette, 200);
-  box-shadow: 0 1px 2px map-get($mat-brown-palette, 200);
 }
 
 .darkTheme ::-webkit-scrollbar-thumb,
 .darkTheme::-webkit-scrollbar-thumb {
-  background: map-get($mat-blue-gray-palette, 200);
-  box-shadow: 0 3px 10px map-get($mat-blue-gray-palette, 200);
+  background: map-get($mat-blue-gray-palette, 200)!important;
   border: 1px 1px 1px 1px black;
 }
 
